Sun Jul 13 19:17:27 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListRollout): call HandleXAction.

Sun Jul 13 12:06:05 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): fix some non-ANSI decls.
	* configure.in: new autoconf magic for python
	* gnubg.c (real_main, usage): new option -p.

Sun Jul 13 02:17:05 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* eval.c, eval.h, export.h, gnubg.c, gtkchequer.c, gtkcube.c
	  gtkgame.c, guile.c, html.c, play.c, rollout.c, rollout.h, sgf.c
	  text.c - change rollout handling to support extending rollouts
	  and 'parallel' rollouts of multiple moves
	
Sat Jul 12 19:58:53 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: change board from typle to list.

Sat Jul 12 15:27:04 2003  Joern Thyssen  <jth@gnubg.org>

	Add Python support for gnubg.

	* gnubg.c: support for Python.
	* gnubgmodule.c: new file: python support for gnubg.

Sat Jul 12 10:11:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalWidget): ugly fix for problematic string.

Sat Jul 12 01:25:24 2003  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: check for python

Fri Jul 11 20:48:34 2003  Joern Thyssen  <jth@gnubg.org>

	* path.c (PathOpen, PathSearch): use DIR_SEPARATOR as
	directory separator instead of hardcoded /.

Fri Jul 11 20:47:56 2003  Holger Bochnig <hbgg@gmx.net>

	* external.c: ignore SIGPIPE on Windows

Fri Jul 11 19:29:11 2003  Holger Bochnig <hbgg@gmx.net>

	trying to use sockets on Windows (SIGPIPE still missing)

	* dice.c, external.c, external.h: added includes and defines for Windows
	* external.c: some workarounds for missing socket functions and
	              ones with different prototypes

Fri Jul 11 12:39:38 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (CommandRoll): fix grammer (bug #4273)
	* gtkoptions.c (OptionsPages): fix some typos and disable
	15x15 on disk (it's not implemented yet)

Thu Jul 10 21:56:41 2003  Holger Bochnig <hbgg@gmx.net>
