@@ -1,3 +1,7 @@
+Sun Jul 13 19:49:16 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubg.py: new file (read during startup).
+
 Sun Jul 13 19:17:27 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkchequer.c (MoveListRollout): call HandleXAction.
